js/src/test/base/errors/test.InvalidOrder.d.ts
export default _default;
declare function _default(exchange: any, symbol: any): Promise<void>;
